--- a/styles/css/estilo.css
+++ b/styles/css/estilo.css
@@ -1,13 +1,137 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap;Noto+Sans:ital,wght@1,400;1,600;1,700&display=swap;Rubik+Dirt&display=swap');
+
+
+
+.barraderolagem {
+    scrollbar-width: thin;
+    scrollbar-color: gray transparent;
+}
+
+
+.barraderolagem::-webkit-scrollbar-thumb:horizontal {
+    border-right: solid 2px rgba(33, 33, 33, 0.5);
+    border-left: solid 2px rgba(33, 33, 33, 0.5);
+}
+
+
+
+
+
+
 
 
 body {
     font-family: 'Noto Sans', sans-serif;
-    background: #f1f1f1;
+    background: transparent;
     color: #f1f1f1;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+
+/* ---------------- Barra de Pesquisa ---------------- */
+
+.caixa_search {
+    position: fixed;
+    top: 5%;
+    right: 50%;
+    transform: translate(50%, -50%);
+    background-color: transparent;
+    height: 40px;
+    border-radius: 30px;
+    border: 0.1px solid;
+    padding: 5px;
+}
+
+.caixa_search:hover>.caixa_texto {
+    width: 200px;
+    padding: 0 6px;
+}
+
+.caixa_search:hover>.botao_search {
+    background-color: transparent;
+    margin-left: 3px;
+}
+
+.botao_search {
+    color: #e84118;
+    float: right;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.0);
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    align-items: center;
+    transition: 0.4s;
+}
+
+.caixa_texto {
+    border: none;
+    background-color: rgba(0, 0, 0, 0.0);
+    outline: none;
+    float: left;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 16px;
+    transition: 0.4s;
+    line-height: 40px;
+    width: 0px;
+    cursor: pointer;
+}
+
+
+a {}
+
+/* Icones */
+
+.icones {
+    background-color: transparent;
 
 }
 
+.iconesair {
+    position: fixed;
+    margin: 20px;
+    right: 35%;
+}
+
+.img_sair {
+    width: 25px;
+    height: 25px;
+}
+
+.iconeportasabertas {
+    position: fixed;
+    margin: 15px;
+    left: 35%;
+}
+
+.img_portas_abertas {
+    width: 30px;
+    height: 30px;
+}
+
+.iconeportamalas {
+    position: fixed;
+    margin: 15px;
+    left: 30%;
+}
+
+.img_porta_malas {
+    width: 35px;
+    height: 35px;
+}
+
+
+
+
+/* ---------------- Imagens ---------------- */
 
 .card_image {
     background-color: rgba(0, 0, 0, 0.8);
@@ -23,39 +147,20 @@ body {
 }
 
 
-.texto {}
+/* ---------------- Menu da Esquerda ---------------- */
 
-
-.km {
-    float: right;
-}
-
-.nome_carro {
-    width: 100%;
-    text-align: left
-}
-
-.valor {
-    width: 100%;
-    text-align: right;
-}
 
 .menucarros {
     width: 250px;
-    padding: 50px;
+    padding: 35px 0px;
     height: 100%;
     overflow-y: scroll;
+    position: absolute;
 }
 
-.perspective {
-  
-
-
-}
-
-.perspectivefilho {
+.left_perspective {
     object-fit: cover;
-   
+
     border-left: 3px solid #f00;
     -moz-transform: skew(0deg, 12deg);
     -webkit-transform: skew(0deg, 12deg);
@@ -72,7 +177,7 @@ body {
     transition: all 0.2s linear;
 }
 
-.perspectivefilho:hover {
+.left_perspective:hover {
     -moz-transform: skew(0deg, 2deg);
     -webkit-transform: skew(0deg, 2deg);
     -o-transform: skew(0deg, 2deg);
@@ -81,4 +186,273 @@ body {
     background-color: rgba(0, 0, 0, 1.0);
     z-index: 999;
     cursor: pointer;
+}
+
+.texto_left {}
+
+.nome_carro {
+    width: 100%;
+    text-align: left
+}
+
+.km {
+    float: right;
+}
+
+.valor {
+    width: 100%;
+    text-align: right;
+}
+
+
+
+
+
+
+/* ---------------- Menu da Direita ---------------- */
+
+
+/* .menudescricao {
+    margin-top: 20%;
+    width: 250px;
+    height: 100%;
+    padding: 0;
+    position: fixed;
+    right: 5px;
+
+} */
+
+/* .right_perspective {
+    float: right;
+    background-image: url(/styles/img/bg_noise.png);
+    width: 30%;
+    height: 600px;
+    transition: 1s;
+    
+    -webkit-border-bottom-left-radius: 30px;
+    -moz-border-radius-bottomleft: 30px;
+    border-bottom-left-radius: 30px;
+
+    -moz-transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    transform: rotate(359deg);
+}
+
+.right_perspective:hover {
+    transition: 1s;
+
+
+    -moz-transform: translate(-11px, 0px);
+    -webkit-transform: translate(-11px, 0px);
+    -o-transform: translate(-11px, 0px);
+    -ms-transform: translate(-11px, 0px);
+    transform: translate(-11px, 0px);
+} */
+
+
+
+.right_texto {
+    font-family: 'Rubik Dirt', cursive;
+    font-size: 40px;
+    background-image: url(/styles/img/bg_noise.png);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border: 5px ridge 
+}
+
+.desc_nome_carro {
+    position: fixed;
+    right: 0;
+    width: 30%;
+    height: 10%;
+    color: #f1f1f1;
+    text-align: left;
+    -webkit-border-top-left-radius: 20px;
+-webkit-border-bottom-left-radius: 20px;
+-moz-border-radius-topleft: 20px;
+-moz-border-radius-bottomleft: 20px;
+border-top-left-radius: 20px;
+border-bottom-left-radius: 20px;
+}
+
+.descricao_carro {
+    position: fixed;
+    top: 14%;
+    right: 0;
+    width: 30%;
+    height: 200px;
+    color: #f1f1f1;
+}
+ 
+.desc_valor_kg {
+    position: fixed;
+    top: 42%;
+    right: 0;
+    width: 20%;
+    height: 50px;
+    color: #f1f1f1;
+    
+}
+
+/* .desc_kg {
+    position: fixed;
+    top: 38%;
+    right: 10.2%;
+    width: 10%;
+    height: 50px;
+    color: #f1f1f1;
+    
+} */
+
+.desc_acel {
+    position: fixed;
+    top: 50%;
+    right: 0;
+    width: 30%;
+    height: 50px;
+    color: #f1f1f1;
+    
+}
+
+
+.desc_vel {
+    position: fixed;
+    top: 58%;
+    right: 0;
+    width: 30%;
+    height: 50px;
+    color: #f1f1f1;
+    
+}
+
+.desc_ade {
+    position: fixed;
+    top: 66%;
+    right: 0;
+    width: 30%;
+    height: 50px;
+    color: #f1f1f1;
+    
+}
+
+
+.desc_fre {
+    position: fixed;
+    top: 74%;
+    right: 0;
+    width: 30%;
+    height: 50px;
+    color: #f1f1f1;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border: 5px ridge
+}
+
+
+
+
+
+
+
+/* ---------------- Menu das Cores ---------------- */
+
+footer {
+    position: fixed;
+    margin: 0;
+    bottom: 0;
+    color: #000;
+    width: calc(100% - 300px);
+    height: 150px;
+    line-height: 50px;
+    text-align: center;
+    justify-content: center;
+    right: 0px;
+    overflow-x: scroll;
+}
+
+
+
+
+
+button {
+    float: right;
+    padding: 5px;
+    cursor: pointer;
+    position: fixed;
+    display: block;
+    right: 30px;
+    bottom: 10px;
+    width: 180px;
+    height: 50px;
+    color: #f1f1f1;
+
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f3c5bd+0,e86c57+0,e86c57+0,ea2803+0,ff6600+69,c72200+100&0.9+36,0.9+99 */
+    background: -moz-linear-gradient(left, rgba(234, 40, 3, 0.9) 0%, rgba(245, 72, 1, 0.9) 36%, rgba(255, 102, 0, 0.9) 69%, rgba(201, 36, 0, 0.9) 99%, rgba(199, 34, 0, 0.9) 100%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, rgba(234, 40, 3, 0.9) 0%, rgba(245, 72, 1, 0.9) 36%, rgba(255, 102, 0, 0.9) 69%, rgba(201, 36, 0, 0.9) 99%, rgba(199, 34, 0, 0.9) 100%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(234, 40, 3, 0.9) 0%, rgba(245, 72, 1, 0.9) 36%, rgba(255, 102, 0, 0.9) 69%, rgba(201, 36, 0, 0.9) 99%, rgba(199, 34, 0, 0.9) 100%);
+    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e6ea2803', endColorstr='#e6c72200', GradientType=1);
+    /* IE6-9 */
+
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+
+    -moz-transform: translate(5px, 0px) skew(-18deg, 0deg);
+    -webkit-transform: translate(5px, 0px) skew(-18deg, 0deg);
+    -o-transform: translate(5px, 0px) skew(-18deg, 0deg);
+    -ms-transform: translate(5px, 0px) skew(-18deg, 0deg);
+    transform: translate(5px, 0px) skew(-18deg, 0deg);
+}
+
+button:hover {
+    transition: 1s;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+.cores {
+    display: inline-flex;
+
+    margin: 15px;
+    cursor: pointer;
+}
+
+
+.cor {
+    border: 2px solid #fff;
+    height: 60px;
+    width: 30px;
+
+    -moz-transform: skew(-20deg, 0deg);
+    -webkit-transform: skew(-20deg, 0deg);
+    -o-transform: skew(-20deg, 0deg);
+    -ms-transform: skew(-20deg, 0deg);
+    transform: skew(-20deg, 0deg);
+
+    margin: 2px;
+
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+}
+
+.cor:hover {
+    -moz-transform: skew(-20deg, 0deg) scale(1.1);
+    -webkit-transform: skew(-20deg, 0deg) scale(1.1);
+    -o-transform: skew(-20deg, 0deg) scale(1.1);
+    -ms-transform: skew(-20deg, 0deg) scale(1.1);
+    transform: skew(-20deg, 0deg) scale(1.1);
+
+    -webkit-box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.75);
 }
