--- a/styles/css/estilo.css
+++ b/styles/css/estilo.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap;Noto+Sans:ital,wght@1,400;1,600;1,700&display=swap;Rubik+Dirt&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mouse+Memoirs&display=swap');
 
 
 .barraderolagem {
@@ -38,7 +38,7 @@ body {
 .caixa_search {
     position: fixed;
     top: 5%;
-    right: 50%;
+    right: 52%;
     transform: translate(50%, -50%);
     background-color: transparent;
     height: 40px;
@@ -48,7 +48,7 @@ body {
 }
 
 .caixa_search:hover>.caixa_texto {
-    width: 200px;
+    width: 150px;
     padding: 0 6px;
 }
 
@@ -58,7 +58,7 @@ body {
 }
 
 .botao_search {
-    color: #e84118;
+    color: #333;
     float: right;
     width: 40px;
     height: 40px;
@@ -86,7 +86,7 @@ body {
 }
 
 
-a {}
+
 
 /* Icones */
 
@@ -97,8 +97,8 @@ a {}
 
 .iconesair {
     position: fixed;
-    margin: 20px;
-    right: 35%;
+    top: 3%;
+    right: 32%;
 }
 
 .img_sair {
@@ -106,9 +106,61 @@ a {}
     height: 25px;
 }
 
+.iconemaiszoom {
+    position: fixed;
+    top: 3%;
+    right: 40%;
+}
+
+.img_mais_zoom {
+    width: 25px;
+    height: 25px;
+}
+
+.iconereduzirzoom {
+    position: fixed;
+    top: 3%;
+    right: 36%;
+}
+
+.img_reduzir_zoom {
+    width: 25px;
+    height: 25px;
+}
+
+
+
+
+
+
+
+.iconesetadireita{
+    position: fixed;
+    top: 3.3%;
+    left: 30%;
+}
+
+.img_seta_direita{
+    width: 25px;
+    height: 25px;
+}
+
+
+.iconesetaesquerda{
+    position: fixed;
+    top: 3.3%;
+    left: 25%;
+}
+
+.img_seta_esquerda{
+    width: 25px;
+    height: 25px;
+}
+
+
 .iconeportasabertas {
     position: fixed;
-    margin: 15px;
+    top: 3%;
     left: 35%;
 }
 
@@ -116,18 +168,6 @@ a {}
     width: 30px;
     height: 30px;
 }
-
-.iconeportamalas {
-    position: fixed;
-    margin: 15px;
-    left: 30%;
-}
-
-.img_porta_malas {
-    width: 35px;
-    height: 35px;
-}
-
 
 
 
@@ -212,144 +252,145 @@ a {}
 /* ---------------- Menu da Direita ---------------- */
 
 
-/* .menudescricao {
-    margin-top: 20%;
-    width: 250px;
-    height: 100%;
-    padding: 0;
-    position: fixed;
-    right: 5px;
-
-} */
-
-/* .right_perspective {
-    float: right;
-    background-image: url(/styles/img/bg_noise.png);
-    width: 30%;
-    height: 600px;
-    transition: 1s;
-    
-    -webkit-border-bottom-left-radius: 30px;
-    -moz-border-radius-bottomleft: 30px;
-    border-bottom-left-radius: 30px;
-
-    -moz-transform: rotate(359deg);
-    -webkit-transform: rotate(359deg);
-    -o-transform: rotate(359deg);
-    -ms-transform: rotate(359deg);
-    transform: rotate(359deg);
-}
-
-.right_perspective:hover {
-    transition: 1s;
-
-
-    -moz-transform: translate(-11px, 0px);
-    -webkit-transform: translate(-11px, 0px);
-    -o-transform: translate(-11px, 0px);
-    -ms-transform: translate(-11px, 0px);
-    transform: translate(-11px, 0px);
-} */
-
-
-
 .right_texto {
-    font-family: 'Rubik Dirt', cursive;
-    font-size: 40px;
+    font-family: 'Mouse Memoirs', sans-serif;
     background-image: url(/styles/img/bg_noise.png);
     text-align: center;
     justify-content: center;
     align-items: center;
-    border: 5px ridge 
+    font-size: 30px;
+
+    -moz-transform: skew(-10deg, -3deg);
+    -webkit-transform: skew(-10deg, -3deg);
+    -o-transform: skew(-10deg, -3deg);
+    -ms-transform: skew(-10deg, -3deg);
+    transform: skew(-10deg, -3deg);
+}
+
+.right_texto:hover {
+    -moz-transform: scale(1.1) skew(0deg, -3deg);
+    -webkit-transform: scale(1.1) skew(0deg, -3deg);
+    -o-transform: scale(1.1) skew(0deg, -3deg);
+    -ms-transform: scale(1.1) skew(0deg, -3deg);
+    transform: scale(1.1) skew(0deg, -3deg);
 }
 
 .desc_nome_carro {
     position: fixed;
     right: 0;
+    top: 2%;
     width: 30%;
     height: 10%;
     color: #f1f1f1;
-    text-align: left;
-    -webkit-border-top-left-radius: 20px;
--webkit-border-bottom-left-radius: 20px;
--moz-border-radius-topleft: 20px;
--moz-border-radius-bottomleft: 20px;
-border-top-left-radius: 20px;
-border-bottom-left-radius: 20px;
+    background-image: url(/styles/img/bg_noise.png);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Rubik Dirt', cursive;
+    font-size: 40px;
+
+    animation: moveToLeft 1s alternate-reverse;
+
+    -moz-transform: skew(-10deg, -3deg);
+    -webkit-transform: skew(-10deg, -3deg);
+    -o-transform: skew(-10deg, -3deg);
+    -ms-transform: skew(-10deg, -3deg);
+    transform: skew(-10deg, -3deg);
 }
 
-.descricao_carro {
-    position: fixed;
-    top: 14%;
-    right: 0;
-    width: 30%;
-    height: 200px;
-    color: #f1f1f1;
-}
- 
-.desc_valor_kg {
-    position: fixed;
-    top: 42%;
-    right: 0;
-    width: 20%;
-    height: 50px;
-    color: #f1f1f1;
-    
+
+.desc_nome_carro:hover {
+    -moz-transform: scale(1.1) skew(0deg, -3deg);
+    -webkit-transform: scale(1.1) skew(0deg, -3deg);
+    -o-transform: scale(1.1) skew(0deg, -3deg);
+    -ms-transform: scale(1.1) skew(0deg, -3deg);
+    transform: scale(1.1) skew(0deg, -3deg);
 }
 
-/* .desc_kg {
+
+.desc_valor {
     position: fixed;
-    top: 38%;
-    right: 10.2%;
+    top: 12.1%;
+    right: 1%;
     width: 10%;
     height: 50px;
     color: #f1f1f1;
-    
-} */
+
+    animation: moveToLeft 1.4s alternate-reverse;
+
+}
+
+.desc_kg {
+    position: fixed;
+    top: 13.2%;
+    right: 14%;
+    width: 10%;
+    height: 50px;
+    color: #f1f1f1;
+
+    animation: moveToLeft 1.4s alternate-reverse;
+
+}
 
 .desc_acel {
     position: fixed;
-    top: 50%;
+    top: 20%;
     right: 0;
-    width: 30%;
+    width: 15%;
     height: 50px;
     color: #f1f1f1;
-    
+
+    animation: moveToLeft 1.6s alternate-reverse;
+
 }
 
 
 .desc_vel {
     position: fixed;
-    top: 58%;
+    top: 28%;
     right: 0;
-    width: 30%;
+    width: 15%;
     height: 50px;
     color: #f1f1f1;
-    
+
+    animation: moveToLeft 1.8s alternate-reverse;
+
 }
 
 .desc_ade {
     position: fixed;
-    top: 66%;
+    top: 36%;
     right: 0;
-    width: 30%;
+    width: 15%;
     height: 50px;
     color: #f1f1f1;
-    
+
+    animation: moveToLeft 2s alternate-reverse;
+
 }
 
 
 .desc_fre {
     position: fixed;
-    top: 74%;
+    top: 44%;
     right: 0;
-    width: 30%;
+    width: 15%;
     height: 50px;
     color: #f1f1f1;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    border: 5px ridge
+
+    animation: moveToLeft 2.2s alternate-reverse;
+
+
+}
+
+@keyframes moveToLeft {
+    0% {
+        transform: translateX(0px);
+    }
+
+    100% {
+        transform: translateX(1000px);
+    }
 }
 
 
